Replace nano scroller due too many bugs with perfect scrollbar

--- a/assets/stylesheet/formView.less
+++ b/assets/stylesheet/formView.less
@@ -6,7 +6,7 @@
     height     : 100%;
     background : #111;
 
-    .col-md-12 {
+    .col-md-10 {
         padding-right: 40px !important;
         padding-left: 40px !important;
         #protocolName {
@@ -35,10 +35,28 @@
     }
 
     .scrollSection {
-        height         : 80%;
-        overflow-y     : scroll;
-        padding-bottom : 20px;
-        padding-top    : 20px;
+        height: 80%;
+        
+        .col-md-12:first-child {
+            height: 100%;
+            /*padding-bottom : 20px;
+            padding-top    : 20px;*/
+        }
+        #scrollSection {
+            height: 100%;
+            position: relative;
+            overflow: hidden;
+        }
+    }
+
+    
+
+    .ps-scrollbar-y-rail {
+        background : black;
+    }
+
+    .drop {
+        padding: 0;
     }
 
     .dropField {
