--- a/assets/stylesheet/panel.less
+++ b/assets/stylesheet/panel.less
@@ -1,6 +1,12 @@
 .widgetsPanel {
     background-image: url('../assets/images/back.jpg');
 
+    .scroll {
+        position: relative;
+        overflow: hidden;
+        height: 90%;
+        margin-top: 5%;
+    }
     #toggle, #untoggle {
         .exo;
         font-size : 35px;
@@ -81,7 +87,7 @@
             outline: none;
         }
         .ui-accordion-content-active {
-            height: auto !important;
+            //height: auto !important;
         }
     }
 
